--- a/webapp_social_media/templates/layout.html
+++ b/webapp_social_media/templates/layout.html
@@ -22,6 +22,8 @@
       href="{{ url_for('static', filename='main.css')}}"
     />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+
     {% if title %}
     <title>SciHub - {{ title }}</title>
     {% else %}
@@ -50,7 +52,11 @@
             </div>
             {% if current_user.is_authenticated %}
             <div style="position: relative; margin-right: 20%; width: 35%">
-              <form action="{{ url_for('search_user') }}" method="POST" class="form-inline">
+              <form
+                action="{{ url_for('search_user') }}"
+                method="POST"
+                class="form-inline"
+              >
                 <input
                   class="form-control form-control-sm mr-3 w-75"
                   type="text"
@@ -68,9 +74,21 @@
               <a class="nav-item nav-link" href="{{ url_for('new_post') }}"
                 >Novo post</a
               >
+              {% if current_user.username == "admin" %}
+              <a class="nav-item nav-link" href="{{ url_for('chart') }}"
+                >Gráficos</a
+              >
+              {% endif %} {% if current_user.requests.count() > 0 %}
+              <a
+                class="nav-item nav-link text-warning"
+                href="{{ url_for('account') }}"
+                >Minha Conta</a
+              >
+              {% else %}
               <a class="nav-item nav-link" href="{{ url_for('account') }}"
                 >Minha Conta</a
               >
+              {% endif %}
               <a class="nav-item nav-link" href="{{ url_for('logout') }}"
                 >Sair</a
               >
@@ -92,7 +110,15 @@
         <div class="col-md-12">
           {% with messages = get_flashed_messages(with_categories=true) %} {% if
           messages %} {% for category, message in messages%}
-          <div class="alert alert-{{ category }}">
+          <div class="alert alert-warning alert-dismissible" role="alert">
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
             {{ message }}
           </div>
           {% endfor %} {% endif %} {% endwith %} {% block content %}{% endblock
