--- a/webapp_social_media/templates/user_friends.html
+++ b/webapp_social_media/templates/user_friends.html
@@ -25,20 +25,9 @@
           {% endif %}
         </div>
 
-        <div class="col-md-5">
-          {% if not current_user.is_friend(user) %} {% if
-          user.is_requesting(current_user) %}
-          <a
-            class="btn btn-success"
-            href="{{ url_for('accept_friendship', nickname=user.username) }}"
-            >Aceitar Amizade</a
-          >
-          <a
-            class="btn btn-danger"
-            href="{{ url_for('deny_friendship', nickname=user.username) }}"
-            >Recusar Amizade
-          </a>
-          {% else %} {% if not current_user.is_requesting(user) %}
+        <div class="col-md-3">
+          {% if not current_user.is_friend(user) %} {% if not
+          current_user.is_requesting(user) %}
           <a
             class="btn btn-success"
             href="{{ url_for('make_request', nickname=user.username) }}"
@@ -50,7 +39,7 @@
             href="{{ url_for('unrequest', nickname=user.username) }}"
             >Remover Solicitação</a
           >
-          {% endif %}{% endif %} {% else %}
+          {% endif %} {% else %}
           <a
             class="btn btn-danger"
             href="{{ url_for('unfriend', nickname=user.username) }}"
@@ -107,8 +96,9 @@
 
           <a
             class="btn btn-primary"
-            href="{{ url_for('user_friends', username=user.username) }}"
-            >Amizades
+            href="{{ url_for('user_posts', username=user.username) }}"
+          >
+            Posts
           </a>
         </div>
       </div>
@@ -116,45 +106,36 @@
   </div>
 </div>
 
-<h1 class="mb-3">Publicações de {{ user.username }}:</h1>
-{% for post in posts.items %}
+<h1 class="mb-3">Amigos de {{ user.username }}:</h1>
+{% for friend in friends.items %}
 <article class="media content-section">
   <img
     class="rounded-circle article-img"
-    src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}"
+    src="{{ url_for('static', filename='profile_pics/' + friend.image_file) }}"
   />
   <div class="media-body">
-    <div class="article-metadata">
+    <h2>
       <a
         class="mr-2"
-        href="{{ url_for('user_posts', username=post.author.username) }}"
-        >{{ post.author.username }}</a
+        href="{{ url_for('user_posts', username=friend.username) }}"
+        >{{ friend.username }}</a
       >
-      <small class="text-muted">{{
-        post.date_posted.strftime("%Y-%m-%d")
-      }}</small>
-    </div>
-    <h2>
-      <a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{
-        post.title
-      }}</a>
     </h2>
-    <p class="article-content">{{ post.content }}</p>
   </div>
 </article>
-{% endfor %} {% for page_num in posts.iter_pages(left_edge=1, right_edge=1,
-left_current=1, right_current=2) %} {%if page_num%} {%if posts.page == page_num
-%}
+{% endfor %} {% for page_num in friends.iter_pages(left_edge=1, right_edge=1,
+left_current=1, right_current=2) %} {%if page_num%} {%if friends.page ==
+page_num %}
 <a
   class="btn btn-info mb-4"
-  href="{{url_for('user_posts', username=user.username, page=page_num)}}"
+  href="{{url_for('user_friends', username=user.username, page=page_num)}}"
 >
   {{ page_num }}
 </a>
 {%else%}
 <a
   class="btn btn-outline-info mb-4"
-  href="{{url_for('user_posts', username=user.username, page=page_num)}}"
+  href="{{url_for('user_friends', username=user.username, page=page_num)}}"
 >
   {{ page_num }}
 </a>
