--- a/webapp_social_media/templates/user_interests.html
+++ b/webapp_social_media/templates/user_interests.html
@@ -8,25 +8,50 @@
           <h2 class="account-heading">{{ user.username }}</h2>
         </div>
 
-        <div class="col">
+        {% if not current_user.username == user.username %}
+        <div class="col-md-3">
           {% if not current_user.is_recommending(user) %}
           <a
             class="btn btn-success"
             href="{{ url_for('recommend', nickname=user.username) }}"
-            >Recomendar ({{ user.recomendations.count() }})</a
+            >Recomendar</a
           >
           {% else %}
           <a
             class="btn btn-danger"
             href="{{ url_for('unrecommend', nickname=user.username) }}"
-            >Remover Recomendação ({{ user.recomendations.count() }})</a
+            >Remover Recomendação</a
           >
           {% endif %}
         </div>
+
+        <div class="col-md-3">
+          {% if not current_user.is_friend(user) %} {% if not
+          current_user.is_requesting(user) %}
+          <a
+            class="btn btn-success"
+            href="{{ url_for('make_request', nickname=user.username) }}"
+            >Solicitar Amizade
+          </a>
+          {% else %}
+          <a
+            class="btn btn-danger"
+            href="{{ url_for('unrequest', nickname=user.username) }}"
+            >Remover Solicitação</a
+          >
+          {% endif %} {% else %}
+          <a
+            class="btn btn-danger"
+            href="{{ url_for('unfriend', nickname=user.username) }}"
+            >Desfazer Amizade</a
+          >
+          {% endif %}
+        </div>
+        {% endif %}
       </div>
 
       <div class="row" style="width: 100%;">
-        <div class="col" style="width: 50%;">
+        <div class="col" style="width: 40%;">
           <p style="color: black; margin-bottom: 0px;">Email</p>
           <p class="text-secondary">{{ user.email }}</p>
 
@@ -42,7 +67,7 @@
           <p class="text-secondary">{{ user.work_state }}</p>
         </div>
 
-        <div class="cow" style="width: 50%;">
+        <div class="cow" style="width: 40%;">
           <p style="color: black; margin-bottom: 0px;">Cidade que Trabalha</p>
           <p class="text-secondary">{{ user.work_city }}</p>
 
@@ -59,14 +84,28 @@
             Posts
           </a>
         </div>
+
+        <div class="cow" style="width: 20%;">
+          <p style="color: black; margin-bottom: 0px;">
+            Número de Recomendações
+          </p>
+          <p class="text-secondary">{{ user.recomendations.count() }}</p>
+
+          <p style="color: black; margin-bottom: 0px;">Número de Amigos</p>
+          <p class="text-secondary">{{ user.number_friends }}</p>
+
+          <a
+            class="btn btn-primary"
+            href="{{ url_for('user_friends', username=user.username) }}"
+            >Amizades
+          </a>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
-<h1 class="mb-3">
-  Tópicos de Interesse de {{ user.username }}: ({{ interests.total }})
-</h1>
+<h1 class="mb-3">Tópicos de Interesse de {{ user.username }}:</h1>
 {% for interest in interests.items %}
 <article class="media content-section">
   <div class="media-body">
@@ -78,11 +117,17 @@
 {% endfor %} {% for page_num in interests.iter_pages(left_edge=1, right_edge=1,
 left_current=1, right_current=2) %} {%if page_num%} {%if interests.page ==
 page_num %}
-<a class="btn btn-info mb-4" href="{{url_for('home', page=page_num)}}">
+<a
+  class="btn btn-info mb-4"
+  href="{{url_for('user_interests', username=user.username, page=page_num)}}"
+>
   {{ page_num }}
 </a>
 {%else%}
-<a class="btn btn-outline-info mb-4" href="{{url_for('home', page=page_num)}}">
+<a
+  class="btn btn-outline-info mb-4"
+  href="{{url_for('user_interests', username=user.username, page=page_num)}}"
+>
   {{ page_num }}
 </a>
 {%endif%} {%else%} ... {%endif%} {% endfor %} {% endblock content %}
